--- a/vsts-ci.yml
+++ b/vsts-ci.yml
@@ -2,7 +2,7 @@
 # Package your Ruby application.
 # Add steps that install rails, analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/vsts/pipelines/languages/ruby
-# Comment
+# Comment22
 
 pool:
   vmImage: 'Ubuntu 16.04'
